@@ -5,6 +5,7 @@
 	header files removed.
 	* groovewidget.cpp, logwidget.cpp, passwidget.cpp: Keyboard
 	shortcuts added, layout improved, label text made translatable
+	* main.cpp: Support for Qt library message translation added
 	
 2009-08-15 Frank Kober <goemusic@yahoo.fr>
 	* arpscreen.cpp: fixed fall through in switch and unfinished "."
